Messaging: Implement option for notification quick reply.
Showing quick reply items in the notification bar is too messy,
add an option to switch it on or off. default to on.

Change-Id: I15fdbe5d494a764d094447a19972a9fe2269232b

--- a/res/values/lineage_constants.xml
+++ b/res/values/lineage_constants.xml
@@ -29,4 +29,7 @@
     <!-- Contact Colors -->
     <bool name="contact_colors_pref_default" translatable="false">true</bool>
     <string name="contact_colors_pref_key" translatable="false">contact_colors</string>
+
+    <!-- Notification Reply -->
+    <bool name="notification_reply_pref_default">true</bool>
 </resources>
