--- a/res/xml/preferences_application.xml
+++ b/res/xml/preferences_application.xml
@@ -54,6 +54,12 @@
         android:defaultValue="@bool/contact_colors_pref_default"
         android:persistent="true" />
 
+    <SwitchPreference
+        android:key="pref_notification_reply"
+        android:title="@string/notification_reply_pref"
+        android:defaultValue="@bool/notification_reply_pref_default"
+        android:persistent="true" />
+
     <CheckBoxPreference
         android:key="pref_show_emoticons"
         android:title="@string/show_emoticons_pref_title"
