Messaging: Contact Colors
Adds the option to use individual colors for contacts.
Matches the colors used in Contacts.

Change-Id: I9f222308a900c5d47ec16f83232bd7f6d9af6cd7

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -23,6 +23,10 @@
     <string name="show_emoticons_pref_title">Emoticons access</string>
     <string name="show_emoticons_pref_summary">Show the emoticons key on the keyboard</string>
 
+    <!-- Contact Colors -->
+    <string name="contact_colors_pref_title">Contact Colors</string>
+    <string name="contact_colors_pref_summary">Use individual colors for contacts</string>
+
     <!-- Mark message as read -->
     <string name="notification_mark_as_read">Mark as read</string>
 
