--- a/res/xml-v23/preferences_application.xml
+++ b/res/xml-v23/preferences_application.xml
@@ -49,6 +49,13 @@
         android:persistent="true" />
 
     <SwitchPreference
+        android:key="@string/contact_colors_pref_key"
+        android:title="@string/contact_colors_pref_title"
+        android:summary="@string/contact_colors_pref_summary"
+        android:defaultValue="@bool/contact_colors_pref_default"
+        android:persistent="true" />
+
+    <SwitchPreference
         android:key="pref_show_emoticons"
         android:title="@string/show_emoticons_pref_title"
         android:persistent="true"
