--- a/res/xml/preferences_application.xml
+++ b/res/xml/preferences_application.xml
@@ -47,6 +47,13 @@
         android:title="@string/notifications_pref_title"
         android:persistent="true" />
 
+    <SwitchPreference
+        android:key="@string/contact_colors_pref_key"
+        android:title="@string/contact_colors_pref_title"
+        android:summary="@string/contact_colors_pref_summary"
+        android:defaultValue="@bool/contact_colors_pref_default"
+        android:persistent="true" />
+
     <CheckBoxPreference
         android:key="pref_show_emoticons"
         android:title="@string/show_emoticons_pref_title"
